--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "turbo": "^1.4.4"
   },
+  "peerDependencies": {
+    "eslint": "^8.22.0"
+  },
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
