--- a/packages/vault-cli/package.json
+++ b/packages/vault-cli/package.json
@@ -6,14 +6,19 @@
   "author": "xafxafxaf",
   "license": "MIT",
   "private": false,
+  "peerDependencies": {
+    "@vault/eslint": "*",
+    "@vault/jest": "*"
+  },
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
-    "@vault/eslint": "*",
-    "@vault/jest": "*",
-    "jest": "^29.0.1",
     "esbuild": "^0.15.6",
-    "typescript": "^4.8.2"
+    "jest": "^29.0.1",
+    "kolorist": "^1.5.1",
+    "typescript": "^4.8.2",
+    "@vault/eslint": "*",
+    "@vault/jest": "*"
   },
   "scripts": {
     "start": "node ./dist/index.js",
