--- a/packages/vault-core/package.json
+++ b/packages/vault-core/package.json
@@ -8,9 +8,10 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
+    "jest": "^29.0.1",
+    "eslint": "^8.22.0",
     "@vault/eslint": "*",
-    "@vault/jest": "*",
-    "jest": "^29.0.1"
+    "@vault/jest": "*"
   },
   "scripts": {
     "test": "jest --passWithNoTests"
