fix: intellisense and linting

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,7 @@
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "~/src/*": ["./src/*"],
+      "~/*": ["./src/*"],
       "@vault/*": ["./packages/*"]
     }
   }
