--- a/packages/vault-cli/package.json
+++ b/packages/vault-cli/package.json
@@ -13,16 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
+    "@vault/eslint": "*",
+    "@vault/jest": "*",
     "esbuild": "^0.15.6",
     "jest": "^29.0.1",
     "kolorist": "^1.5.1",
-    "typescript": "^4.8.2",
-    "@vault/eslint": "*",
-    "@vault/jest": "*"
+    "typescript": "^4.8.2"
   },
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "esbuild ./src/app.ts --bundle --platform=node --outfile=dist/index.js",
     "test": "jest"
-  }
+  },
+  "dependencies": {}
 }
