--- a/packages/vault-core/package.json
+++ b/packages/vault-core/package.json
@@ -8,12 +8,15 @@
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
-    "jest": "^29.0.1",
-    "eslint": "^8.22.0",
     "@vault/eslint": "*",
-    "@vault/jest": "*"
+    "@vault/jest": "*",
+    "eslint": "^8.22.0",
+    "jest": "^29.0.1"
   },
   "scripts": {
     "test": "jest --passWithNoTests"
+  },
+  "dependencies": {
+    "sqlite3": "^5.0.11"
   }
 }
