--- a/packages/vault-sql/package.json
+++ b/packages/vault-sql/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@vault/core",
+  "name": "@vault/sql",
   "version": "1.0.0",
-  "description": "A Vault App Core",
+  "description": "Library for comfortable work with sqlite",
   "main": "src/lib.ts",
   "author": "xafxafxaf",
   "license": "MIT",
+  "private": false,
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
@@ -13,10 +14,10 @@
     "eslint": "^8.22.0",
     "jest": "^29.0.1"
   },
-  "dependencies": {
-    "@vault/sql": "*"
-  },
   "scripts": {
     "test": "jest --passWithNoTests"
+  },
+  "dependencies": {
+    "sqlite3": "^5.0.11"
   }
 }
